.opsera-hcp-0223/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcp-0223
  labels:
    app: hcp-0223
    managed-by: opsera-c2c
spec:
  selector:
    app: hcp-0223
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
